--- a/css/styles.css
+++ b/css/styles.css
@@ -17,17 +17,16 @@ ul {
   list-style-type: none;
 }
 
-.nav {
+nav {
   margin: auto;
   text-align: center;
-  
 }
 
-.nav ul {
+nav ul {
   float: right;
 }
 
-.nav li {
+nav li {
   display: inline;
   padding: 10px;
   margin-right: 25px;
@@ -302,5 +301,47 @@ footer {
 
   #skills ul {
     text-align: center;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  
+  h2{
+    text-align: center;
+  }
+  
+  .photo img {
+    display: none;
+  }
+
+  .nav {
+    background-color: rgb(180, 180, 180);
+  }
+  .nav ul{
+    float: none;
+  }
+
+  .nav li {
+    font-size: 18px;
+  }
+
+  #about-me p {
+    line-height: 1.85rem;
+  }
+
+  #projects ul {
+    text-align: center;
+  }
+
+  #projects img {
+    max-height: 250px;
+  }
+
+  #skills ul {
+    text-align: center;
+  }
+
+  #skills img {
+    display: none;
   }
 }
